[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-workout-tracker"
version = "0.1.0"
description = "CLI app to track schedule items, workout plans, and other goals"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Contributors" }]

[project.scripts]
track-planner = "tracker_app.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
